--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-.share-tech-regular {
+.share {
   font-family: "Share Tech", sans-serif;
   font-weight: 400;
   font-style: normal;
